fixed h1 text align

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
   font-size: 36px;
   line-height: 1.5;
   color: #0badf8;
+  text-align: center;
 }
 
 a {
